--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -13,7 +14,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Api Covid - React</title>
+    <title>Erudito-Dev</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
