--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="Erudito-Dev"
       content="By Erudito"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="/public/code.png" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
