--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <div id="root"></div>
     
     <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
+    <script src="https://kit.fontawesome.com/130065061a.js" crossorigin="anonymous"></script>
     
   </body>
 </html>
